--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "main": "index.js",
     "scripts": {
         "start": "node server.js",
-        "server": "nodemon server.js"
+        "server": "nodemon server.js",
+        "client": "npm start --prefix client",
+        "clientinstall": "npm install --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "keywords": [],
     "author": "",
@@ -19,6 +22,7 @@
         "mongoose": "^5.8.11"
     },
     "devDependencies": {
+        "concurrently": "^5.1.0",
         "nodemon": "^2.0.2"
     }
 }
